--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,36 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>NewPro</title>
-  
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="styles.scss">
+<head>
+    <meta charset="utf-8">
+    <title>NG2 Starting Application</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" type="text/css" href="styles.scss">
 </head>
+
 <body>
-	<div class="container">
-		<div class="wrapper">
-			<my-app>Loading AppComponent content here ...</my-app>
-		</div>
-	</div>
+    <div class="container">
+        <div class="wrapper">
+            <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+                <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button> -->
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">NG2 Starting Application</a>
+                </div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                    </ul>
+                    <!-- <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form> -->
+                </div>
+            </nav>
+            <my-app>Loading AppComponent content here ...</my-app>
+        </div>
+    </div>
 </body>
+
 </html>
